--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div id="app">
-        <h1 v-model="message">{{ message }}</h1>
+        <h1>{{ message }}</h1>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
