--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     
     <div id="app">
         <h1>{{ message }}</h1>
+
+        <img v-bind:src="srcImage" v-bind:alt="altImage">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
